# snpe_hand_landmark

./: .gitattributes  CMakeLists.txt  README.md  run_android_demo.sh
bash/: build_android_aarch64.sh
config/: CMakeLists.txt  g_hand_config.cpp  g_hand_config.h
example/: CMakeLists.txt  test_hand_landmark.cpp
include/: g_hand_error.h  g_hand_landmark_api.h
model/: hlandmark.dlc
snpe/benchmarks/: config_help.json  snpe_bench.py
snpe/benchmarks/snpebm/: snpebm_artifacts.json  snpebm_artifacts_aarch64_ubuntu_gcc75.json  snpebm_artifacts_android_aarch64.json  snpebm_artifacts_le.json  snpebm_artifacts_le64_gcc49.json  snpebm_artifacts_le64_oe_gcc64.json  snpebm_artifacts_le64_oe_gcc82.json  snpebm_artifacts_le_oe_gcc64hf.json  snpebm_artifacts_le_oe_gcc82hf.json  snpebm_bm.py  snpebm_config.py  snpebm_config_restrictions.py  snpebm_constants.py  snpebm_device.py  snpebm_jsonkeys.py  snpebm_parser.py
snpe/doc/html/: android_tutorial.html  annotated.html  benchmark_mobilenet_ssd.html  benchmarking.html  classcom_1_1qualcomm_1_1qti_1_1snpe_1_1SNPE_1_1NeuralNetworkBuilder-members.html  classcom_1_1qualcomm_1_1qti_1_1snpe_1_1SNPE_1_1NeuralNetworkBuilder.html  classcom_1_1qualcomm_1_1qti_1_1snpe_1_1SnpeError_1_1IllegalArgsOrStateException-members.html  classcom_1_1qualcomm_1_1qti_1_1snpe_1_1SnpeError_1_1IllegalArgsOrStateException.html  classcom_1_1qualcomm_1_1qti_1_1snpe_1_1SnpeError_1_1InvalidInputException-members.html  classcom_1_1qualcomm_1_1qti_1_1snpe_1_1SnpeError_1_1InvalidInputException.html  classcom_1_1qualcomm_1_1qti_1_1snpe_1_1SnpeError_1_1NativeException-members.html  classcom_1_1qualcomm_1_1qti_1_1snpe_1_1SnpeError_1_1NativeException.html  classcom_1_1qualcomm_1_1qti_1_1snpe_1_1SnpeError_1_1SnpeIOException-members.html  classcom_1_1qualcomm_1_1qti_1_1snpe_1_1SnpeError_1_1SnpeIOException.html  classes.html  compiling_udo_package.html  cplus_plus_tutorial.html  creating_udo_package.html  dsp_runtime.html  enumcom_1_1qualcomm_1_1qti_1_1platformvalidator_1_1PlatformValidatorUtil_1_1Runtime-members.html  enumcom_1_1qualcomm_1_1qti_1_1platformvalidator_1_1PlatformValidatorUtil_1_1Runtime.html  enumcom_1_1qualcomm_1_1qti_1_1snpe_1_1NeuralNetwork_1_1ExecutionPriorityHint-members.html  enumcom_1_1qualcomm_1_1qti_1_1snpe_1_1NeuralNetwork_1_1ExecutionPriorityHint.html  enumcom_1_1qualcomm_1_1qti_1_1snpe_1_1NeuralNetwork_1_1PerformanceProfile-members.html  enumcom_1_1qualcomm_1_1qti_1_1snpe_1_1NeuralNetwork_1_1PerformanceProfile.html  enumcom_1_1qualcomm_1_1qti_1_1snpe_1_1NeuralNetwork_1_1Runtime-members.html  enumcom_1_1qualcomm_1_1qti_1_1snpe_1_1NeuralNetwork_1_1Runtime.html  enumcom_1_1qualcomm_1_1qti_1_1snpe_1_1SnpeError_1_1Error-members.html  enumcom_1_1qualcomm_1_1qti_1_1snpe_1_1SnpeError_1_1Error.html  functions.html  functions_0x7e.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_f.html  functions_func.html  functions_func_0x7e.html  functions_func_b.html  (+78 more)
snpe/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  enums_3.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_c.js  enumvalues_d.js  functions_0.js  functions_5.js  functions_6.js  functions_8.js  functions_b.js  pages_1.js  (+26 more)
snpe/examples/NativeCpp/SampleCode/: Makefile.aarch64-linux-gcc4.9  Makefile.aarch64-oe-linux-gcc6.4  Makefile.aarch64-oe-linux-gcc8.2  Makefile.aarch64-ubuntu-gcc7.5  Makefile.arm-linux-gcc4.9sf  Makefile.arm-oe-linux-gcc6.4hf  Makefile.arm-oe-linux-gcc8.2hf  Makefile.x86_64-linux-clang
snpe/examples/NativeCpp/UdlExample/: Makefile.aarch64-linux-gcc4.9  Makefile.aarch64-oe-linux-gcc6.4  Makefile.aarch64-oe-linux-gcc8.2  Makefile.aarch64-ubuntu-gcc7.5  Makefile.arm-linux-gcc4.9sf  Makefile.arm-oe-linux-gcc6.4hf  Makefile.arm-oe-linux-gcc8.2hf  Makefile.x86_64-linux-clang
snpe/examples/Python/UdlExample/: caffe_custom_normalize_udl.py  (+2 more)
snpe/lib/aarch64-oe-linux-gcc6.4/: libatomic.so.1
snpe/share/dlcviewer/: snpe_dlc_viewer_template.html
src/: CMakeLists.txt  g_hand_landmark_api.cpp
src/hand_landmark/: hand_landmark.cpp  hand_landmark.h
(+198 files in other folders)
